@@ -17,15 +17,10 @@ import greencity.dto.habit.HabitEnrollDto;
 import greencity.dto.habit.HabitVO;
 import greencity.dto.habit.HabitWorkingDaysDto;
 import greencity.dto.habit.HabitsDateEnrollmentDto;
-import greencity.dto.habit.UserToDoAndCustomToDoListsDto;
 import greencity.dto.habitstatuscalendar.HabitStatusCalendarVO;
-import greencity.dto.todolistitem.BulkSaveCustomToDoListItemDto;
 import greencity.dto.todolistitem.CustomToDoListItemResponseDto;
 import greencity.dto.todolistitem.CustomToDoListItemSaveRequestDto;
-import greencity.dto.todolistitem.CustomToDoListItemWithStatusSaveRequestDto;
-import greencity.dto.todolistitem.ToDoListItemDto;
-import greencity.dto.todolistitem.ToDoListItemRequestDto;
-import greencity.dto.todolistitem.ToDoListItemWithStatusRequestDto;
+import greencity.dto.todolistitem.ToDoListItemResponseDto;
 import greencity.dto.user.UserToDoListItemAdvanceDto;
 import greencity.dto.user.UserToDoListItemResponseDto;
 import greencity.dto.user.UserVO;
@@ -43,7 +38,8 @@ import greencity.enums.AchievementAction;
 import greencity.enums.AchievementCategoryType;
 import greencity.enums.HabitAssignStatus;
 import greencity.enums.HabitInvitationStatus;
-import greencity.enums.ToDoListItemStatus;
+import greencity.enums.Role;
+import greencity.enums.UserToDoListItemStatus;
 import greencity.enums.NotificationType;
 import greencity.exception.exceptions.BadRequestException;
 import greencity.exception.exceptions.CustomToDoListItemNotSavedException;
@@ -81,9 +77,7 @@ import java.util.ArrayList;
 import java.util.Comparator;
 import java.util.List;
 import java.util.Locale;
-import java.util.Map;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 /**
@@ -101,8 +95,6 @@ public class HabitAssignServiceImpl implements HabitAssignService {
     private final CustomToDoListItemRepo customToDoListItemRepo;
     private final ToDoListItemTranslationRepo toDoListItemTranslationRepo;
     private final HabitStatusCalendarRepo habitStatusCalendarRepo;
-    private final ToDoListItemService toDoListItemService;
-    private final CustomToDoListItemService customToDoListItemService;
     private final HabitStatisticService habitStatisticService;
     private final HabitStatusCalendarService habitStatusCalendarService;
     private final AchievementCalculation achievementCalculation;
@@ -179,17 +171,19 @@ public class HabitAssignServiceImpl implements HabitAssignService {
         return habitAssignManagementDtoList;
     }
 
-    private void saveCustomToDoListItems(List<CustomToDoListItemSaveRequestDto> saveList,
-        User user, Habit habit) {
+    private void saveCustomToDoListItemsForCurrentUser(List<CustomToDoListItemSaveRequestDto> saveList,
+        User user, Habit habit, HabitAssign habitAssign) {
         if (!CollectionUtils.isEmpty(saveList)) {
             saveList.forEach(item -> {
                 CustomToDoListItem customToDoListItem = modelMapper.map(item, CustomToDoListItem.class);
                 List<CustomToDoListItem> duplicates = user.getCustomToDoListItems().stream()
-                    .filter(userItem -> userItem.getText().equals(customToDoListItem.getText()))
+                    .filter(userItem -> userItem.getText().equals(customToDoListItem.getText())
+                        && userItem.getHabit().getId().equals(habit.getId()))
                     .toList();
                 if (duplicates.isEmpty()) {
                     customToDoListItem.setUser(user);
                     customToDoListItem.setHabit(habit);
+                    customToDoListItem.setIsDefault(false);
                     user.getCustomToDoListItems().add(customToDoListItem);
                     customToDoListItemRepo.save(customToDoListItem);
                 } else {
@@ -197,6 +191,9 @@ public class HabitAssignServiceImpl implements HabitAssignService {
                         ErrorMessage.CUSTOM_TO_DO_LIST_ITEM_EXISTS, customToDoListItem.getText()));
                 }
             });
+            List<Long> customToDoListByUser = customToDoListItemRepo
+                .getAllCustomToDoListItemIdByUserIdAndByHabitIdAndNotDefault(habit.getId(), user.getId());
+            saveUserToDoListItems(customToDoListByUser, habitAssign, true);
         }
     }
 
@@ -215,15 +212,6 @@ public class HabitAssignServiceImpl implements HabitAssignService {
             HabitAssign habitAssign =
                 createHabitAssign(friendOfUser, habit, habitAssignCustomPropertiesDto, HabitAssignStatus.REQUESTED);
             habitAssignManagementDtoList.add(modelMapper.map(habitAssign, HabitAssignManagementDto.class));
-        }
-    }
-
-    private void saveDefaultToDoListItems(HabitAssign habitAssign,
-        List<Long> defaultToDoListItems) {
-        if (!defaultToDoListItems.isEmpty()) {
-            List<ToDoListItem> toDoList =
-                toDoListItemRepo.getToDoListByListOfId(defaultToDoListItems);
-            saveUserToDoListItems(toDoList, habitAssign);
         }
     }
 
@@ -248,7 +236,7 @@ public class HabitAssignServiceImpl implements HabitAssignService {
         return habitAssignRepo.findAllByUserId(userId)
             .stream()
             .filter(this::isHabitCustom)
-            .map(habitAssign -> buildHabitAssignDtoContent(habitAssign, language)).collect(Collectors.toList());
+            .map(habitAssign -> buildHabitAssignDtoContent(habitAssign, language)).toList();
     }
 
     /**
@@ -305,16 +293,19 @@ public class HabitAssignServiceImpl implements HabitAssignService {
         return modelMapper.map(habitAssignRepo.save(habitAssign), HabitAssignUserDurationDto.class);
     }
 
-    private void saveUserToDoListItems(List<ToDoListItem> toDoList, HabitAssign habitAssign) {
-        List<UserToDoListItem> userToDoList = new ArrayList<>();
-        for (ToDoListItem toDoItem : toDoList) {
-            userToDoList.add(UserToDoListItem.builder()
-                .habitAssign(habitAssign)
-                .toDoListItem(toDoItem)
-                .status(ToDoListItemStatus.ACTIVE)
-                .build());
+    private void saveUserToDoListItems(List<Long> toDoListIds, HabitAssign habitAssign, boolean isCustomItems) {
+        if (!toDoListIds.isEmpty()) {
+            List<UserToDoListItem> userToDoList = new ArrayList<>();
+            for (Long itemId : toDoListIds) {
+                userToDoList.add(UserToDoListItem.builder()
+                    .habitAssign(habitAssign)
+                    .targetId(itemId)
+                    .status(UserToDoListItemStatus.INPROGRESS)
+                    .isCustomItem(isCustomItems)
+                    .build());
+            }
+            userToDoListItemRepo.saveAll(userToDoList);
         }
-        userToDoListItemRepo.saveAll(userToDoList);
     }
 
     /**
@@ -365,6 +356,8 @@ public class HabitAssignServiceImpl implements HabitAssignService {
         habitAssignDto.setHabit(modelMapper.map(habitTranslation, HabitDto.class));
         habitAssignDto.setFriendsIdsTrackingHabit(getFriendsIdsTrackingHabitList(habitAssign));
         setToDoListItems(habitAssignDto, habitAssign, language);
+        setCustomToDoListItems(habitAssignDto, habitAssign);
+        setUserToDoListItems(habitAssignDto, habitAssign, language);
         setLikes(habitAssignDto, habitAssign);
         setDislikes(habitAssignDto, habitAssign);
         return habitAssignDto;
@@ -384,6 +377,8 @@ public class HabitAssignServiceImpl implements HabitAssignService {
         habitAssignDto.setFriendsIdsTrackingHabit(
             habitInvitationService.getInvitedFriendsIdsTrackingHabitList(userId, habitAssign.getHabit().getId()));
         setToDoListItems(habitAssignDto, habitAssign, language);
+        setCustomToDoListItems(habitAssignDto, habitAssign);
+        setUserToDoListItems(habitAssignDto, habitAssign, language);
         return habitAssignDto;
     }
 
@@ -393,19 +388,66 @@ public class HabitAssignServiceImpl implements HabitAssignService {
     }
 
     private void setToDoListItems(HabitAssignDto habitAssignDto, HabitAssign habitAssign, String language) {
-        habitAssignDto.getHabit().setToDoListItems(userToDoListItemRepo
-            .getAllAssignedToDoListItemsFull(habitAssign.getId()).stream()
-            .map(toDoListItem -> ToDoListItemDto.builder()
-                .id(toDoListItem.getId())
-                .status(toDoListItem.getStatus().toString())
-                .text(toDoListItem.getToDoListItem().getTranslations().stream()
-                    .filter(toDoItem -> toDoItem.getLanguage().getCode().equals(language)).findFirst()
-                    .orElseThrow(
-                        () -> new NotFoundException(
-                            ErrorMessage.TO_DO_LIST_ITEM_TRANSLATION_NOT_FOUND + habitAssignDto.getHabit().getId()))
-                    .getContent())
-                .build())
-            .collect(Collectors.toList()));
+        habitAssignDto.getHabit()
+            .setToDoListItems(toDoListItemRepo.getAllToDoListItemIdByHabitIdIsContained(habitAssign.getHabit().getId())
+                .stream()
+                .map(toDoListItemId -> {
+                    ToDoListItem toDoListItem =
+                        toDoListItemRepo.getReferenceById(toDoListItemId);
+                    return ToDoListItemResponseDto.builder()
+                        .id(toDoListItem.getId())
+                        .text(toDoListItem.getTranslations().stream()
+                            .filter(toDoItem -> toDoItem.getLanguage().getCode().equals(language)).findFirst()
+                            .orElseThrow(
+                                () -> new NotFoundException(
+                                    ErrorMessage.TO_DO_LIST_ITEM_TRANSLATION_NOT_FOUND
+                                        + habitAssignDto.getHabit().getId()))
+                            .getContent())
+                        .build();
+                })
+                .toList());
+    }
+
+    private void setCustomToDoListItems(HabitAssignDto habitAssignDto, HabitAssign habitAssign) {
+        habitAssignDto.getHabit().setCustomToDoListItems(
+            customToDoListItemRepo.getAllCustomToDoListItemIdByHabitIdIsContained(habitAssign.getHabit().getId())
+                .stream()
+                .map(customToDoListItemId -> {
+                    CustomToDoListItem customToDoListItem =
+                        customToDoListItemRepo.getReferenceById(customToDoListItemId);
+                    return CustomToDoListItemResponseDto.builder()
+                        .id(customToDoListItem.getId())
+                        .text(customToDoListItem.getText())
+                        .build();
+                })
+                .toList());
+    }
+
+    private void setUserToDoListItems(HabitAssignDto habitAssignDto, HabitAssign habitAssign, String language) {
+        List<UserToDoListItem> userToDoListItems = userToDoListItemRepo.findAllByHabitAssingId(habitAssign.getId());
+        List<UserToDoListItemAdvanceDto> userToDoListItemDtos = userToDoListItems.stream()
+            .map(userToDoListItem -> {
+                UserToDoListItemAdvanceDto itemDto = UserToDoListItemAdvanceDto.builder()
+                    .id(userToDoListItem.getId())
+                    .targetId(userToDoListItem.getTargetId())
+                    .isCustomItem(userToDoListItem.getIsCustomItem())
+                    .status(userToDoListItem.getStatus())
+                    .dateCompleted(userToDoListItem.getDateCompleted())
+                    .build();
+                boolean isCustomItem = userToDoListItem.getIsCustomItem();
+                if (isCustomItem) {
+                    CustomToDoListItem customItem =
+                        customToDoListItemRepo.getReferenceById(userToDoListItem.getTargetId());
+                    itemDto.setContent(customItem.getText());
+                } else {
+                    ToDoListItemTranslation itemTranslation =
+                        toDoListItemTranslationRepo.findByLangAndToDoListItemId(language, itemDto.getTargetId());
+                    itemDto.setContent(itemTranslation.getContent());
+                }
+                return itemDto;
+            })
+            .toList();
+        habitAssignDto.setUserToDoListItems(userToDoListItemDtos);
     }
 
     private HabitAssignDto buildHabitAssignDtoContent(HabitAssign habitAssign, String language) {
@@ -417,16 +459,26 @@ public class HabitAssignServiceImpl implements HabitAssignService {
     private List<UserToDoListItemAdvanceDto> buildUserToDoListItemAdvanceDto(HabitAssign habitAssign,
         String language) {
         List<UserToDoListItemAdvanceDto> userItemsDTO = new ArrayList<>();
-        boolean isContains;
+        userItemsDTO.addAll(buildUserToDoListItemAdvanceDtoForToDoList(habitAssign, language));
+        userItemsDTO.addAll(buildUserToDoListItemAdvanceDtoForCustomToDoList(habitAssign));
+        return userItemsDTO;
+    }
+
+    private List<UserToDoListItemAdvanceDto> buildUserToDoListItemAdvanceDtoForToDoList(HabitAssign habitAssign,
+        String language) {
+        List<UserToDoListItemAdvanceDto> userItemList = new ArrayList<>();
         List<ToDoListItemTranslation> listItemTranslations = toDoListItemTranslationRepo
             .findToDoListByHabitIdAndByLanguageCode(language, habitAssign.getHabit().getId());
         for (ToDoListItemTranslation translationItem : listItemTranslations) {
-            isContains = false;
+            boolean isContains = false;
             for (UserToDoListItem userItem : habitAssign.getUserToDoListItems()) {
-                if (translationItem.getToDoListItem().getId().equals(userItem.getToDoListItem().getId())) {
-                    userItemsDTO.add(UserToDoListItemAdvanceDto.builder()
+                boolean isCustomItem = userItem.getIsCustomItem();
+                if (translationItem.getToDoListItem().getId().equals(userItem.getTargetId())
+                    && !isCustomItem) {
+                    userItemList.add(UserToDoListItemAdvanceDto.builder()
                         .id(userItem.getId())
-                        .toDoListItemId(translationItem.getId())
+                        .targetId(userItem.getTargetId())
+                        .isCustomItem(false)
                         .status(userItem.getStatus())
                         .dateCompleted(userItem.getDateCompleted())
                         .content(translationItem.getContent())
@@ -436,14 +488,51 @@ public class HabitAssignServiceImpl implements HabitAssignService {
                 }
             }
             if (!isContains) {
-                userItemsDTO.add(UserToDoListItemAdvanceDto.builder()
-                    .toDoListItemId(translationItem.getId())
-                    .status(ToDoListItemStatus.ACTIVE)
+                userItemList.add(UserToDoListItemAdvanceDto.builder()
+                    .targetId(translationItem.getToDoListItem().getId())
+                    .isCustomItem(false)
+                    .status(UserToDoListItemStatus.DISABLED)
                     .content(translationItem.getContent())
                     .build());
             }
         }
-        return userItemsDTO;
+        return userItemList;
+    }
+
+    private List<UserToDoListItemAdvanceDto> buildUserToDoListItemAdvanceDtoForCustomToDoList(HabitAssign habitAssign) {
+        List<UserToDoListItemAdvanceDto> userItemList = new ArrayList<>();
+        List<Long> allAvailableForCurrentAssign =
+            customToDoListItemRepo.getAllCustomToDoListItemIdByHabitIdIsContained(habitAssign.getHabit().getId());
+        for (Long customItemId : allAvailableForCurrentAssign) {
+            boolean isContains = false;
+            CustomToDoListItem customItem = customToDoListItemRepo.findById(customItemId)
+                .orElseThrow(
+                    () -> new NotFoundException(ErrorMessage.CUSTOM_TO_DO_LIST_ITEM_NOT_FOUND_BY_ID + customItemId));
+            for (UserToDoListItem userItem : habitAssign.getUserToDoListItems()) {
+                boolean isCustomItem = userItem.getIsCustomItem();
+                if (customItemId.equals(userItem.getTargetId()) && isCustomItem) {
+                    userItemList.add(UserToDoListItemAdvanceDto.builder()
+                        .id(userItem.getId())
+                        .targetId(userItem.getTargetId())
+                        .isCustomItem(true)
+                        .status(userItem.getStatus())
+                        .dateCompleted(userItem.getDateCompleted())
+                        .content(customItem.getText())
+                        .build());
+                    isContains = true;
+                    break;
+                }
+            }
+            if (!isContains) {
+                userItemList.add(UserToDoListItemAdvanceDto.builder()
+                    .targetId(customItem.getId())
+                    .isCustomItem(true)
+                    .status(UserToDoListItemStatus.DISABLED)
+                    .content(customItem.getText())
+                    .build());
+            }
+        }
+        return userItemList;
     }
 
     /**
@@ -505,40 +594,9 @@ public class HabitAssignServiceImpl implements HabitAssignService {
         var habitAssignDto = buildHabitAssignDto(habitAssign, language);
         HabitDto habit = habitAssignDto.getHabit();
         habit.setDefaultDuration(habitAssignDto.getDuration());
-        List<ToDoListItemDto> toDoListItems = new ArrayList<>();
-        toDoListItemTranslationRepo
-            .findToDoListByHabitIdAndByLanguageCode(language, habit.getId())
-            .forEach(x -> toDoListItems.add(modelMapper.map(x, ToDoListItemDto.class)));
-        changeStatuses(ToDoListItemStatus.INPROGRESS.toString(),
-            habitAssign.getId(), toDoListItems);
-        changeStatuses(ToDoListItemStatus.DONE.toString(),
-            habitAssign.getId(), toDoListItems);
-        habit.setToDoListItems(toDoListItems);
         habit.setAmountAcquiredUsers(habitAssignRepo.findAmountOfUsersAcquired(habit.getId()));
         habit.setHabitAssignStatus(habitAssign.getStatus());
         return habit;
-    }
-
-    /**
-     * Method changes statuses in toDoListItems.
-     *
-     * @param status        String status to set.
-     * @param habitAssignId Long id.
-     * @param toDoListItems list with habit's items.
-     */
-    private void changeStatuses(String status, Long habitAssignId,
-        List<ToDoListItemDto> toDoListItems) {
-        List<Long> otherStatusItems = userToDoListItemRepo
-            .getToDoListItemsByHabitAssignIdAndStatus(habitAssignId, status);
-        if (!otherStatusItems.isEmpty()) {
-            for (Long otherStatusItemId : otherStatusItems) {
-                for (ToDoListItemDto slid : toDoListItems) {
-                    if (slid.getId().equals(otherStatusItemId)) {
-                        slid.setStatus(status);
-                    }
-                }
-            }
-        }
     }
 
     /**
@@ -548,7 +606,7 @@ public class HabitAssignServiceImpl implements HabitAssignService {
     public List<HabitAssignDto> getAllHabitAssignsByUserIdAndStatusNotCancelled(Long userId, String language) {
         return habitAssignRepo.findAllByUserId(userId)
             .stream().map(habitAssign -> buildHabitAssignDto(habitAssign, language, userId))
-            .collect(Collectors.toList());
+            .toList();
     }
 
     /**
@@ -578,7 +636,7 @@ public class HabitAssignServiceImpl implements HabitAssignService {
     public List<HabitAssignDto> getAllHabitAssignsByHabitIdAndStatusNotCancelled(Long habitId,
         String language) {
         return habitAssignRepo.findAllByHabitId(habitId)
-            .stream().map(habitAssign -> buildHabitAssignDto(habitAssign, language)).collect(Collectors.toList());
+            .stream().map(habitAssign -> buildHabitAssignDto(habitAssign, language)).toList();
     }
 
     /**
@@ -609,27 +667,48 @@ public class HabitAssignServiceImpl implements HabitAssignService {
     public List<HabitAssignDto> getAllHabitAssignsByUserIdAndStatusAcquired(Long userId, String language) {
         return habitAssignRepo.findAllByUserIdAndStatusAcquired(userId)
             .stream().map(habitAssign -> buildHabitAssignDtoContent(habitAssign, language))
-            .collect(Collectors.toList());
+            .toList();
     }
 
     /**
      * {@inheritDoc}
      */
     @Override
-    public UserToDoAndCustomToDoListsDto getUserToDoAndCustomToDoLists(
+    public List<UserToDoListItemResponseDto> getToDoAndCustomToDoLists(
         Long userId, Long habitAssignId, String language) {
-        return UserToDoAndCustomToDoListsDto
-            .builder()
-            .userToDoListItemDto(
-                toDoListItemService.getUserToDoListByHabitAssignId(userId, habitAssignId, language))
-            .customToDoListItemDto(customToDoListItemService
-                .findAllAvailableCustomToDoListItemsByHabitAssignId(userId, habitAssignId))
-            .build();
+        HabitAssign habitAssign = habitAssignRepo.findById(habitAssignId)
+            .orElseThrow(() -> new NotFoundException(
+                ErrorMessage.HABIT_ASSIGN_NOT_FOUND_BY_ID + habitAssignId));
+
+        UserVO userVO = userService.findById(userId);
+        if (!habitAssign.getUser().getId().equals(userId) && !userVO.getRole().equals(Role.ROLE_ADMIN)) {
+            throw new UserHasNoPermissionToAccessException(ErrorMessage.USER_HAS_NO_PERMISSION);
+        }
+        return userToDoListItemRepo.findAllByHabitAssingId(habitAssignId)
+            .stream()
+            .map(userToDoListItem -> {
+                UserToDoListItemResponseDto itemDto =
+                    modelMapper.map(userToDoListItem, UserToDoListItemResponseDto.class);
+                boolean isCustomItem = userToDoListItem.getIsCustomItem();
+                if (isCustomItem) {
+                    CustomToDoListItem customItem =
+                        customToDoListItemRepo.getReferenceById(userToDoListItem.getTargetId());
+                    itemDto.setText(customItem.getText());
+                } else {
+                    ToDoListItemTranslation itemTranslation = toDoListItemTranslationRepo
+                        .findByLangAndToDoListItemId(language, userToDoListItem.getTargetId());
+                    itemDto.setText(itemTranslation.getContent());
+                }
+                return itemDto;
+            }).toList();
     }
 
+    /**
+     * {@inheritDoc}
+     */
     @Transactional
     @Override
-    public List<UserToDoAndCustomToDoListsDto> getListOfUserAndCustomToDoListsWithStatusInprogress(
+    public List<UserToDoListItemResponseDto> getListOfUserToDoListsWithStatusInprogress(
         Long userId, String language) {
         List<HabitAssign> habitAssignList = habitAssignRepo.findAllByUserIdAndStatusIsInProgress(userId);
         if (habitAssignList.isEmpty()) {
@@ -637,14 +716,9 @@ public class HabitAssignServiceImpl implements HabitAssignService {
                 ErrorMessage.HABIT_ASSIGN_NOT_FOUND_WITH_CURRENT_USER_ID_AND_INPROGRESS_STATUS + userId);
         }
         return habitAssignList.stream()
-            .map(habitAssign -> UserToDoAndCustomToDoListsDto
-                .builder()
-                .userToDoListItemDto(toDoListItemService
-                    .getUserToDoListItemsByHabitAssignIdAndStatusInProgress(habitAssign.getId(), language))
-                .customToDoListItemDto(customToDoListItemService
-                    .findAllCustomToDoListItemsWithStatusInProgress(userId, habitAssign.getHabit().getId()))
-                .build())
-            .collect(Collectors.toList());
+            .map(HabitAssign::getUserToDoListItems)
+            .map(userToDoListItem -> modelMapper.map(userToDoListItem, UserToDoListItemResponseDto.class))
+            .toList();
     }
 
     /**
@@ -656,7 +730,7 @@ public class HabitAssignServiceImpl implements HabitAssignService {
         String language) {
         return habitAssignRepo.findAllByUserIdAndStatusIsCancelled(userId)
             .stream().map(habitAssign -> buildHabitAssignDtoContent(habitAssign, language))
-            .collect(Collectors.toList());
+            .toList();
     }
 
     /**
@@ -868,7 +942,7 @@ public class HabitAssignServiceImpl implements HabitAssignService {
     public List<HabitAssignDto> findInprogressHabitAssignsOnDate(Long userId, LocalDate date, String language) {
         List<HabitAssign> list = habitAssignRepo.findAllInprogressHabitAssignsOnDate(userId, date);
         return list.stream().map(
-            habitAssign -> buildHabitAssignDto(habitAssign, language)).collect(Collectors.toList());
+            habitAssign -> buildHabitAssignDto(habitAssign, language)).toList();
     }
 
     /**
@@ -879,7 +953,7 @@ public class HabitAssignServiceImpl implements HabitAssignService {
     public List<HabitAssignDto> findInprogressHabitAssignsOnDateContent(Long userId, LocalDate date, String language) {
         List<HabitAssign> list = habitAssignRepo.findAllInprogressHabitAssignsOnDate(userId, date);
         return list.stream().map(
-            habitAssign -> buildHabitAssignDtoContent(habitAssign, language)).collect(Collectors.toList());
+            habitAssign -> buildHabitAssignDtoContent(habitAssign, language)).toList();
     }
 
     /**
@@ -906,7 +980,7 @@ public class HabitAssignServiceImpl implements HabitAssignService {
             .map(date -> HabitsDateEnrollmentDto.builder().enrollDate(date)
                 .habitAssigns(new ArrayList<>())
                 .build())
-            .collect(Collectors.toList());
+            .toList();
 
         habitAssignsBetweenDates.forEach(habitAssign -> buildHabitsDateEnrollmentDto(habitAssign, language, dtos));
         return dtos;
@@ -1004,7 +1078,8 @@ public class HabitAssignServiceImpl implements HabitAssignService {
                 AchievementCategoryType.HABIT, AchievementAction.DELETE, habitAssign.getHabit().getId());
         }
         userToDoListItemRepo.deleteToDoListItemsByHabitAssignId(habitAssign.getId());
-        customToDoListItemRepo.deleteCustomToDoListItemsByHabitId(habitAssign.getHabit().getId());
+        customToDoListItemRepo.deleteNotDefaultCustomToDoListItemsByHabitIdAndUserId(habitAssign.getHabit().getId(),
+            userId);
         habitAssignRepo.delete(habitAssign);
     }
 
@@ -1021,392 +1096,12 @@ public class HabitAssignServiceImpl implements HabitAssignService {
                 .filter(f -> f.getId().equals(toDoListItemId)).findAny();
         if (optionalUserToDoListItem.isPresent()) {
             UserToDoListItem utdli = optionalUserToDoListItem.get();
-            if (utdli.getStatus().equals(ToDoListItemStatus.INPROGRESS)) {
-                utdli.setStatus(ToDoListItemStatus.ACTIVE);
-            } else if (utdli.getStatus().equals(ToDoListItemStatus.ACTIVE)) {
-                utdli.setStatus(ToDoListItemStatus.INPROGRESS);
+            if (utdli.getStatus().equals(UserToDoListItemStatus.INPROGRESS)) {
+                utdli.setStatus(UserToDoListItemStatus.DONE);
+            } else if (utdli.getStatus().equals(UserToDoListItemStatus.DONE)) {
+                utdli.setStatus(UserToDoListItemStatus.INPROGRESS);
             }
             userToDoListItemRepo.save(utdli);
-        }
-    }
-
-    /**
-     * {@inheritDoc}
-     */
-    @Override
-    @Transactional
-    public void fullUpdateUserAndCustomToDoLists(
-        Long userId,
-        Long habitAssignId,
-        UserToDoAndCustomToDoListsDto listsDto,
-        String language) {
-        fullUpdateUserToDoList(userId, habitAssignId, listsDto.getUserToDoListItemDto(), language);
-        fullUpdateCustomToDoList(userId, habitAssignId, listsDto.getCustomToDoListItemDto());
-    }
-
-    /**
-     * Method that update UserToDoList.
-     *
-     * <ul>
-     * <li>If items are present in the db, method update them;</li>
-     * <li>If items don't present in the db and id is null, method try to add it to
-     * user;</li>
-     * <li>If some items from db don't present in the lists, method delete
-     * them(Except items with DISABLED status).</li>
-     * </ul>
-     *
-     * @param userId        {@code User} id.
-     * @param habitAssignId {@code HabitAssign} id.
-     * @param list          {@link UserToDoListItemResponseDto} User To-Do lists.
-     * @param language      {@link String} of language code value.
-     */
-    private void fullUpdateUserToDoList(
-        Long userId,
-        Long habitAssignId,
-        List<UserToDoListItemResponseDto> list,
-        String language) {
-        updateAndDeleteUserToDoListWithStatuses(userId, habitAssignId, list);
-        saveUserToDoListWithStatuses(userId, habitAssignId, list, language);
-    }
-
-    /**
-     * Method that save {@link UserToDoListItemResponseDto} for item with id = null.
-     *
-     * @param userId        {@code User} id.
-     * @param habitAssignId {@code HabitAssign} id.
-     * @param userToDoList  {@link UserToDoListItemResponseDto} User to-do lists.
-     * @param language      {@link String} of language code value.
-     */
-    private void saveUserToDoListWithStatuses(
-        Long userId,
-        Long habitAssignId,
-        List<UserToDoListItemResponseDto> userToDoList,
-        String language) {
-        List<UserToDoListItemResponseDto> listToSave = userToDoList.stream()
-            .filter(toDoItem -> toDoItem.getId() == null)
-            .collect(Collectors.toList());
-        checkDuplicationForUserToDoListByName(listToSave);
-
-        HabitAssign habitAssign = habitAssignRepo.findById(habitAssignId)
-            .orElseThrow(() -> new NotFoundException(
-                ErrorMessage.HABIT_ASSIGN_NOT_FOUND_BY_ID + habitAssignId));
-
-        if (!habitAssign.getUser().getId().equals(userId)) {
-            throw new UserHasNoPermissionToAccessException(ErrorMessage.USER_HAS_NO_PERMISSION);
-        }
-
-        Long habitId = habitAssign.getHabit().getId();
-
-        List<ToDoListItem> toDoListItems = findRelatedToDoListItem(habitId, language, listToSave);
-
-        Map<Long, ToDoListItemStatus> toDoItemIdToStatusMap =
-            getToDoItemIdToStatusMap(toDoListItems, listToSave, language);
-
-        List<ToDoListItemRequestDto> listToSaveParam = toDoListItems.stream()
-            .map(toDoItem -> ToDoListItemWithStatusRequestDto.builder()
-                .id(toDoItem.getId())
-                .status(toDoItemIdToStatusMap.get(toDoItem.getId()))
-                .build())
-            .collect(Collectors.toList());
-
-        toDoListItemService.saveUserToDoListItems(userId, habitId, listToSaveParam, language);
-    }
-
-    private void checkDuplicationForUserToDoListByName(List<UserToDoListItemResponseDto> listToSave) {
-        long countOfUnique = listToSave.stream()
-            .map(UserToDoListItemResponseDto::getText)
-            .distinct()
-            .count();
-        if (listToSave.size() != countOfUnique) {
-            throw new BadRequestException(ErrorMessage.DUPLICATED_USER_TO_DO_LIST_ITEM);
-        }
-    }
-
-    private List<ToDoListItem> findRelatedToDoListItem(
-        Long habitId,
-        String language,
-        List<UserToDoListItemResponseDto> listToSave) {
-        if (listToSave.isEmpty()) {
-            return List.of();
-        }
-
-        List<String> listToSaveNames = listToSave.stream()
-            .map(UserToDoListItemResponseDto::getText)
-            .collect(Collectors.toList());
-
-        List<ToDoListItem> relatedToDoListItems =
-            toDoListItemRepo.findByNames(habitId, listToSaveNames, language);
-
-        if (listToSaveNames.size() != relatedToDoListItems.size()) {
-            List<String> relatedToDoListItemNames = relatedToDoListItems.stream()
-                .map(x -> getToDoItemNameByLanguageCode(x, language))
-                .toList();
-
-            listToSaveNames.removeAll(relatedToDoListItemNames);
-
-            String notFoundItems = String.join(", ", listToSaveNames);
-
-            throw new NotFoundException(ErrorMessage.TO_DO_LIST_ITEM_NOT_FOUND_BY_NAMES + notFoundItems);
-        }
-        return relatedToDoListItems;
-    }
-
-    private Map<Long, ToDoListItemStatus> getToDoItemIdToStatusMap(
-        List<ToDoListItem> toDoListItems,
-        List<UserToDoListItemResponseDto> listToSave,
-        String language) {
-        Map<String, ToDoListItemStatus> toDoItemNameToStatusMap =
-            listToSave.stream()
-                .collect(Collectors.toMap(
-                    UserToDoListItemResponseDto::getText,
-                    UserToDoListItemResponseDto::getStatus));
-
-        return toDoListItems.stream()
-            .collect(Collectors.toMap(
-                ToDoListItem::getId,
-                toDoListItem -> toDoItemNameToStatusMap
-                    .get(getToDoItemNameByLanguageCode(toDoListItem, language))));
-    }
-
-    private String getToDoItemNameByLanguageCode(ToDoListItem toDoItem, String language) {
-        return toDoItem.getTranslations()
-            .stream()
-            .filter(x -> x.getLanguage().getCode().equals(language))
-            .findFirst()
-            .orElseThrow()
-            .getContent();
-    }
-
-    /**
-     * Method that update or delete {@link UserToDoListItem}. Not founded items,
-     * except DISABLED, will be deleted.
-     *
-     * @param userId        {@code User} id.
-     * @param habitAssignId {@code HabitAssign} id.
-     * @param userToDoList  {@link UserToDoListItemResponseDto} User to-do lists.
-     */
-    private void updateAndDeleteUserToDoListWithStatuses(
-        Long userId,
-        Long habitAssignId,
-        List<UserToDoListItemResponseDto> userToDoList) {
-        List<UserToDoListItemResponseDto> listToUpdate = userToDoList.stream()
-            .filter(item -> item.getId() != null)
-            .collect(Collectors.toList());
-
-        checkDuplicationForUserToDoListById(listToUpdate);
-
-        HabitAssign habitAssign = habitAssignRepo
-            .findByHabitAssignIdUserIdNotCancelledAndNotExpiredStatus(habitAssignId, userId)
-            .orElseThrow(() -> new NotFoundException(
-                ErrorMessage.HABIT_ASSIGN_NOT_FOUND_WITH_CURRENT_USER_ID_AND_HABIT_ASSIGN_ID + habitAssignId));
-
-        List<UserToDoListItem> currentList = habitAssign.getUserToDoListItems();
-
-        checkIfUserToDoItemsExist(listToUpdate, currentList);
-
-        Map<Long, ToDoListItemStatus> mapIdToStatus =
-            listToUpdate.stream()
-                .collect(Collectors.toMap(
-                    UserToDoListItemResponseDto::getId,
-                    UserToDoListItemResponseDto::getStatus));
-
-        List<UserToDoListItem> listToSave = new ArrayList<>();
-        List<UserToDoListItem> listToDelete = new ArrayList<>();
-        for (var currentItem : currentList) {
-            ToDoListItemStatus newStatus = mapIdToStatus.get(currentItem.getId());
-            if (newStatus != null) {
-                currentItem.setStatus(newStatus);
-                listToSave.add(currentItem);
-            } else {
-                if (!currentItem.getStatus().equals(ToDoListItemStatus.DISABLED)) {
-                    listToDelete.add(currentItem);
-                }
-            }
-        }
-        userToDoListItemRepo.saveAll(listToSave);
-        userToDoListItemRepo.deleteAll(listToDelete);
-    }
-
-    private void checkDuplicationForUserToDoListById(List<UserToDoListItemResponseDto> listToUpdate) {
-        long countOfUnique = listToUpdate.stream()
-            .map(UserToDoListItemResponseDto::getId)
-            .distinct()
-            .count();
-        if (listToUpdate.size() != countOfUnique) {
-            throw new BadRequestException(ErrorMessage.DUPLICATED_USER_TO_DO_LIST_ITEM);
-        }
-    }
-
-    private void checkIfUserToDoItemsExist(
-        List<UserToDoListItemResponseDto> listToUpdate,
-        List<UserToDoListItem> currentList) {
-        List<Long> updateIds =
-            listToUpdate.stream().map(UserToDoListItemResponseDto::getId).collect(Collectors.toList());
-        List<Long> currentIds = currentList.stream().map(UserToDoListItem::getId).toList();
-
-        updateIds.removeAll(currentIds);
-
-        if (!updateIds.isEmpty()) {
-            String notFoundedIds = updateIds.stream()
-                .map(Object::toString)
-                .collect(Collectors.joining(", "));
-            throw new NotFoundException(ErrorMessage.USER_TO_DO_LIST_ITEM_NOT_FOUND + notFoundedIds);
-        }
-    }
-
-    /**
-     * Method that update CustomToDo List.
-     *
-     * <ul>
-     * <li>If items are present in the db, method update them;</li>
-     * <li>If items don't present in the db and id is null, method try to add it to
-     * user;</li>
-     * <li>If some items from db don't present in the lists, method delete
-     * them(Except items with DISABLED status).</li>
-     * </ul>
-     *
-     * @param userId        {@code User} id.
-     * @param habitAssignId {@code HabitAssign} id.
-     * @param list          {@link CustomToDoListItemResponseDto} Custom To-Do
-     *                      lists.
-     */
-    private void fullUpdateCustomToDoList(
-        Long userId,
-        Long habitAssignId,
-        List<CustomToDoListItemResponseDto> list) {
-        updateAndDeleteCustomToDoListWithStatuses(userId, habitAssignId, list);
-        saveCustomToDoListWithStatuses(userId, habitAssignId, list);
-    }
-
-    /**
-     * Method that save {@link CustomToDoListItemResponseDto} for item with id =
-     * null.
-     *
-     * @param userId         {@code User} id.
-     * @param habitAssignId  {@code HabitAssign} id.
-     * @param customToDoList {@link CustomToDoListItemResponseDto} Custom to-do
-     *                       lists.
-     */
-    private void saveCustomToDoListWithStatuses(
-        Long userId,
-        Long habitAssignId,
-        List<CustomToDoListItemResponseDto> customToDoList) {
-        List<CustomToDoListItemResponseDto> listToSave = customToDoList.stream()
-            .filter(toDoItem -> toDoItem.getId() == null)
-            .collect(Collectors.toList());
-
-        checkDuplicationForCustomToDoListByName(listToSave);
-
-        HabitAssign habitAssign = habitAssignRepo.findById(habitAssignId)
-            .orElseThrow(() -> new NotFoundException(
-                ErrorMessage.HABIT_ASSIGN_NOT_FOUND_BY_ID + habitAssignId));
-
-        if (!habitAssign.getUser().getId().equals(userId)) {
-            throw new UserHasNoPermissionToAccessException(ErrorMessage.USER_HAS_NO_PERMISSION);
-        }
-
-        List<CustomToDoListItemSaveRequestDto> listToSaveParam = listToSave.stream()
-            .map(item -> CustomToDoListItemWithStatusSaveRequestDto.builder()
-                .text(item.getText())
-                .status(item.getStatus())
-                .build())
-            .collect(Collectors.toList());
-
-        customToDoListItemService.save(new BulkSaveCustomToDoListItemDto(listToSaveParam), userId,
-            habitAssignId);
-    }
-
-    private void checkDuplicationForCustomToDoListByName(List<CustomToDoListItemResponseDto> listToSave) {
-        long countOfUnique = listToSave.stream()
-            .map(CustomToDoListItemResponseDto::getText)
-            .distinct()
-            .count();
-        if (listToSave.size() != countOfUnique) {
-            throw new BadRequestException(ErrorMessage.DUPLICATED_CUSTOM_TO_DO_LIST_ITEM);
-        }
-    }
-
-    /**
-     * Method that update or delete {@link CustomToDoListItem}. Not founded items,
-     * except DISABLED, will be deleted.
-     *
-     * @param userId         {@code User} id.
-     * @param habitAssignId  {@code HabitAssign} id.
-     * @param customToDoList {@link CustomToDoListItemResponseDto} Custom to-do
-     *                       lists.
-     */
-    private void updateAndDeleteCustomToDoListWithStatuses(
-        Long userId,
-        Long habitAssignId,
-        List<CustomToDoListItemResponseDto> customToDoList) {
-        List<CustomToDoListItemResponseDto> listToUpdate = customToDoList.stream()
-            .filter(toDoItem -> toDoItem.getId() != null)
-            .collect(Collectors.toList());
-
-        checkDuplicationForCustomToDoListById(listToUpdate);
-
-        HabitAssign habitAssign = habitAssignRepo.findById(habitAssignId)
-            .orElseThrow(() -> new NotFoundException(
-                ErrorMessage.HABIT_ASSIGN_NOT_FOUND_BY_ID + habitAssignId));
-
-        if (!habitAssign.getUser().getId().equals(userId)) {
-            throw new UserHasNoPermissionToAccessException(ErrorMessage.USER_HAS_NO_PERMISSION);
-        }
-
-        Long habitId = habitAssign.getHabit().getId();
-
-        List<CustomToDoListItem> currentList =
-            customToDoListItemRepo.findAllByUserIdAndHabitId(userId, habitId);
-
-        checkIfCustomToDoItemsExist(listToUpdate, currentList);
-
-        Map<Long, ToDoListItemStatus> mapIdToStatus =
-            listToUpdate.stream()
-                .collect(Collectors.toMap(
-                    CustomToDoListItemResponseDto::getId,
-                    CustomToDoListItemResponseDto::getStatus));
-
-        List<CustomToDoListItem> listToSave = new ArrayList<>();
-        List<CustomToDoListItem> listToDelete = new ArrayList<>();
-        for (var currentItem : currentList) {
-            ToDoListItemStatus newStatus = mapIdToStatus.get(currentItem.getId());
-            if (newStatus != null) {
-                currentItem.setStatus(newStatus);
-                listToSave.add(currentItem);
-            } else {
-                if (!currentItem.getStatus().equals(ToDoListItemStatus.DISABLED)) {
-                    listToDelete.add(currentItem);
-                }
-            }
-        }
-        customToDoListItemRepo.saveAll(listToSave);
-        customToDoListItemRepo.deleteAll(listToDelete);
-    }
-
-    private void checkDuplicationForCustomToDoListById(List<CustomToDoListItemResponseDto> listToUpdate) {
-        long countOfUnique = listToUpdate.stream()
-            .map(CustomToDoListItemResponseDto::getId)
-            .distinct()
-            .count();
-        if (listToUpdate.size() != countOfUnique) {
-            throw new BadRequestException(ErrorMessage.DUPLICATED_CUSTOM_TO_DO_LIST_ITEM);
-        }
-    }
-
-    private void checkIfCustomToDoItemsExist(
-        List<CustomToDoListItemResponseDto> listToUpdate,
-        List<CustomToDoListItem> currentList) {
-        List<Long> updateIds =
-            listToUpdate.stream().map(CustomToDoListItemResponseDto::getId).collect(Collectors.toList());
-        List<Long> currentIds = currentList.stream().map(CustomToDoListItem::getId).toList();
-
-        updateIds.removeAll(currentIds);
-
-        if (!updateIds.isEmpty()) {
-            String notFoundedIds = updateIds.stream()
-                .map(Object::toString)
-                .collect(Collectors.joining(", "));
-            throw new NotFoundException(ErrorMessage.CUSTOM_TO_DO_LIST_ITEM_WITH_THIS_ID_NOT_FOUND + notFoundedIds);
         }
     }
 
@@ -1460,10 +1155,15 @@ public class HabitAssignServiceImpl implements HabitAssignService {
     private void processHabitInvite(UserVO userVO, User friend, Long habitId, Locale locale) {
         Habit habit = getHabitById(habitId);
         HabitAssign habitAssign = assignHabitToUser(habit, friend);
-        assignToDoListToUser(habitId, habitAssign);
+        List<Long> toDoListItemIds = toDoListItemRepo.getAllToDoListItemIdByHabitIdIsContained(habitId);
+        List<Long> customToDoListItemIds =
+            customToDoListItemRepo.getAllCustomToDoListItemIdByHabitIdIsContained(habitId);
+        saveUserToDoListItems(toDoListItemIds, habitAssign, false);
+        saveUserToDoListItems(customToDoListItemIds, habitAssign, true);
 
         HabitAssign inviterHabitAssign = getOrAssignHabitToUser(userVO, habit);
-        assignToDoListToUser(habitId, inviterHabitAssign);
+        saveUserToDoListItems(toDoListItemIds, inviterHabitAssign, false);
+        saveUserToDoListItems(customToDoListItemIds, inviterHabitAssign, true);
 
         boolean invitationExists = habitInvitationRepo.existsByInviterHabitAssignAndInviteeHabitAssign(
             inviterHabitAssign, habitAssign);
@@ -1491,7 +1191,11 @@ public class HabitAssignServiceImpl implements HabitAssignService {
         return habitAssignRepo.findByHabitIdAndUserId(habit.getId(), userVO.getId())
             .orElseGet(() -> {
                 HabitAssign habitAssign = assignHabitToUser(habit, getUserById(userVO.getId()));
-                assignToDoListToUser(habit.getId(), habitAssign);
+                List<Long> toDoListItemIds = toDoListItemRepo.getAllToDoListItemIdByHabitIdIsContained(habit.getId());
+                List<Long> customToDoListItemIds =
+                    customToDoListItemRepo.getAllCustomToDoListItemIdByHabitIdIsContained(habit.getId());
+                saveUserToDoListItems(toDoListItemIds, habitAssign, false);
+                saveUserToDoListItems(customToDoListItemIds, habitAssign, true);
                 return habitAssign;
             });
     }
@@ -1519,14 +1223,6 @@ public class HabitAssignServiceImpl implements HabitAssignService {
     private HabitAssign getHabitAssignById(Long habitId, Long userId) {
         return habitAssignRepo
             .findByHabitIdAndUserIdAndStatusIsCancelledOrRequested(habitId, userId);
-    }
-
-    private void assignToDoListToUser(Long habitId, HabitAssign habitAssign) {
-        List<Long> allToDoListItemId = toDoListItemRepo.getAllToDoListItemIdByHabitIdISContained(habitId);
-        if (!allToDoListItemId.isEmpty()) {
-            List<ToDoListItem> toDoList = toDoListItemRepo.getToDoListByListOfId(allToDoListItemId);
-            saveUserToDoListItems(toDoList, habitAssign);
-        }
     }
 
     /**
@@ -1589,13 +1285,19 @@ public class HabitAssignServiceImpl implements HabitAssignService {
         HabitAssign habitAssign = updateOrCreateHabitAssignWithStatus(habit, user, status);
 
         HabitAssignPropertiesDto customAssignProperties = habitAssignCustomPropertiesDto.getHabitAssignPropertiesDto();
-        List<Long> defaultToDoList = customAssignProperties.getDefaultToDoListItems();
-
         enhanceAssignWithCustomProperties(habitAssign, customAssignProperties);
         habitAssign = habitAssignRepo.save(habitAssign);
 
-        saveDefaultToDoListItems(habitAssign, defaultToDoList);
-        saveCustomToDoListItems(habitAssignCustomPropertiesDto.getCustomToDoListItemList(), user, habit);
+        List<Long> defaultToDoList = customAssignProperties.getDefaultToDoListItemIds();
+        List<Long> customDefaultToDoList = customAssignProperties.getDefaultCustomToDoListItemIds();
+        if (defaultToDoList != null) {
+            saveUserToDoListItems(defaultToDoList, habitAssign, false);
+        }
+        if (customDefaultToDoList != null) {
+            saveUserToDoListItems(customDefaultToDoList, habitAssign, true);
+        }
+        saveCustomToDoListItemsForCurrentUser(habitAssignCustomPropertiesDto.getCustomToDoListItemList(), user, habit,
+            habitAssign);
 
         return habitAssign;
     }
@@ -1627,7 +1329,9 @@ public class HabitAssignServiceImpl implements HabitAssignService {
 
     private HabitAssignCustomPropertiesDto buildDefaultHabitAssignPropertiesDto(Habit habit) {
         HabitAssignPropertiesDto habitAssignPropertiesDto = HabitAssignPropertiesDto.builder()
-            .defaultToDoListItems(toDoListItemRepo.getAllToDoListItemIdByHabitIdISContained(habit.getId()))
+            .defaultToDoListItemIds(toDoListItemRepo.getAllToDoListItemIdByHabitIdIsContained(habit.getId()))
+            .defaultCustomToDoListItemIds(
+                customToDoListItemRepo.getAllCustomToDoListItemIdByHabitIdIsContained(habit.getId()))
             .duration(habit.getDefaultDuration())
             .isPrivate(false)
             .build();
