@@ -11,7 +11,8 @@ import greencity.dto.habit.CustomHabitDtoResponse;
 import greencity.dto.habit.HabitDto;
 import greencity.dto.habittranslation.HabitTranslationDto;
 import greencity.dto.notification.LikeNotificationDto;
-import greencity.dto.todolistitem.ToDoListItemDto;
+import greencity.dto.todolistitem.CustomToDoListItemWithStatusResponseDto;
+import greencity.dto.todolistitem.ToDoListItemResponseDto;
 import greencity.dto.user.UserProfilePictureDto;
 import greencity.dto.user.UserVO;
 import greencity.entity.CustomToDoListItem;
@@ -25,13 +26,13 @@ import greencity.enums.Role;
 import greencity.enums.AchievementCategoryType;
 import greencity.enums.AchievementAction;
 import greencity.enums.NotificationType;
+import greencity.enums.ToDoListItemStatus;
 import greencity.exception.exceptions.BadRequestException;
 import greencity.exception.exceptions.NotFoundException;
 import greencity.exception.exceptions.UserHasNoFriendWithIdException;
 import greencity.exception.exceptions.UserHasNoPermissionToAccessException;
 import greencity.exception.exceptions.WrongEmailException;
 import greencity.mapping.CustomHabitMapper;
-import greencity.mapping.CustomToDoListMapper;
 import greencity.mapping.CustomToDoListResponseDtoMapper;
 import greencity.mapping.HabitTranslationDtoMapper;
 import greencity.mapping.HabitTranslationMapper;
@@ -77,7 +78,6 @@ public class HabitServiceImpl implements HabitService {
     private final ModelMapper modelMapper;
     private final CustomToDoListResponseDtoMapper customToDoListResponseDtoMapper;
     private final HabitTranslationDtoMapper habitTranslationDtoMapper;
-    private final CustomToDoListMapper customToDoListMapper;
     private final HabitTranslationMapper habitTranslationMapper;
     private final CustomHabitMapper customHabitMapper;
     private final ToDoListItemTranslationRepo toDoListItemTranslationRepo;
@@ -111,10 +111,10 @@ public class HabitServiceImpl implements HabitService {
         HabitTranslation habitTranslation = habitTranslationRepo.findByHabitAndLanguageCode(habit, languageCode)
             .orElseThrow(() -> new NotFoundException(ErrorMessage.HABIT_TRANSLATION_NOT_FOUND + id));
         var habitDto = modelMapper.map(habitTranslation, HabitDto.class);
-        List<ToDoListItemDto> toDoListItems = new ArrayList<>();
+        List<ToDoListItemResponseDto> toDoListItems = new ArrayList<>();
         toDoListItemTranslationRepo
             .findToDoListByHabitIdAndByLanguageCode(languageCode, id)
-            .forEach(x -> toDoListItems.add(modelMapper.map(x, ToDoListItemDto.class)));
+            .forEach(x -> toDoListItems.add(modelMapper.map(x, ToDoListItemResponseDto.class)));
         habitDto.setToDoListItems(toDoListItems);
         habitDto.setAmountAcquiredUsers(habitAssignRepo.findAmountOfUsersAcquired(habitDto.getId()));
         boolean isCustomHabit = habit.getIsCustomHabit();
@@ -325,14 +325,6 @@ public class HabitServiceImpl implements HabitService {
      * {@inheritDoc}
      */
     @Override
-    public List<ToDoListItemDto> getToDoListForHabit(Long habitId, String lang) {
-        return toDoListItemTranslationRepo.findToDoListByHabitIdAndByLanguageCode(lang, habitId)
-            .stream()
-            .map(g -> modelMapper.map(g, ToDoListItemDto.class))
-            .collect(Collectors.toList());
-    }
-
-    @Override
     public void addToDoListItemToHabit(Long habitId, Long itemId) {
         habitRepo.addToDoListItemToHabit(habitId, itemId);
     }
@@ -354,6 +346,9 @@ public class HabitServiceImpl implements HabitService {
         return listId;
     }
 
+    /**
+     * {@inheritDoc}
+     */
     @Transactional
     @Override
     public CustomHabitDtoResponse addCustomHabit(
@@ -375,22 +370,23 @@ public class HabitServiceImpl implements HabitService {
         setTagsIdsToHabit(addCustomHabitDtoRequest, habit);
         saveHabitTranslationListsToHabitTranslationRepo(addCustomHabitDtoRequest, habit);
         setCustomToDoListItemToHabit(addCustomHabitDtoRequest, habit, user);
-        return buildAddCustomHabitDtoResponse(habit, user.getId());
+        return buildAddCustomHabitDtoResponse(habit);
     }
 
     /**
      * Method that build {@link CustomHabitDtoResponse} from {@link Habit}.
      *
-     * @param habit  {@link Habit}
-     * @param userId {@link Long}
+     * @param habit {@link Habit}
      * @return {@link CustomHabitDtoResponse}
      * @author Lilia Mokhnatska
      */
-    private CustomHabitDtoResponse buildAddCustomHabitDtoResponse(Habit habit, Long userId) {
+    private CustomHabitDtoResponse buildAddCustomHabitDtoResponse(Habit habit) {
         CustomHabitDtoResponse response = modelMapper.map(habit, CustomHabitDtoResponse.class);
 
-        response.setCustomToDoListItemDto(customToDoListResponseDtoMapper
-            .mapAllToList(customToDoListItemRepo.findAllByUserIdAndHabitId(userId, habit.getId())));
+        List<CustomToDoListItem> habitCustomItems =
+            customToDoListItemRepo.findAllByHabitIdAndIsDefaultTrue(habit.getId());
+        response.setCustomToDoListItemDto(habitCustomItems.stream()
+            .map(item -> modelMapper.map(item, CustomToDoListItemWithStatusResponseDto.class)).toList());
         response.setTagIds(habit.getTags().stream().map(Tag::getId).collect(Collectors.toSet()));
         response
             .setHabitTranslations(habitTranslationDtoMapper.mapAllToList(habitTranslationRepo.findAllByHabit(habit)));
@@ -411,7 +407,7 @@ public class HabitServiceImpl implements HabitService {
         List<Long> ids = habitInvitationService.getInvitedFriendsIdsTrackingHabitList(userId, habitAssignId);
         List<User> users = userRepo.findAllById(ids);
         return users.stream().map(user -> modelMapper.map(user, UserProfilePictureDto.class))
-            .collect(Collectors.toList());
+            .toList();
     }
 
     @Transactional
@@ -425,7 +421,7 @@ public class HabitServiceImpl implements HabitService {
         checkAccessForAdminAndModeratorAndByUserId(user, toUpdate);
         enhanceHabitWithNewData(toUpdate, habitDto, user, image);
         Habit updatedHabit = habitRepo.save(toUpdate);
-        return buildAddCustomHabitDtoResponse(updatedHabit, user.getId());
+        return buildAddCustomHabitDtoResponse(updatedHabit);
     }
 
     private void enhanceHabitWithNewData(Habit toUpdate, CustomHabitDtoRequest habitDto,
@@ -455,16 +451,21 @@ public class HabitServiceImpl implements HabitService {
     }
 
     private void saveNewCustomToDoListItemsToUpdate(CustomHabitDtoRequest habitDto, Habit habit, User user) {
-        List<CustomToDoListItem> customToDoListItems = customToDoListMapper
-            .mapAllToList(habitDto.getCustomToDoListItemDto());
-
-        customToDoListItems.stream()
+        List<CustomToDoListItem> customToDoListItems = habitDto.getCustomToDoListItemDto()
+            .stream()
             .filter(item -> Objects.isNull(item.getId()))
-            .forEach(customToDoListItem -> {
-                customToDoListItem.setHabit(habit);
-                customToDoListItem.setUser(user);
-                customToDoListItemRepo.save(customToDoListItem);
-            });
+            .map(item -> CustomToDoListItem.builder()
+                .text(item.getText())
+                .build())
+            .toList();
+
+        customToDoListItems.forEach(customToDoListItem -> {
+            customToDoListItem.setHabit(habit);
+            customToDoListItem.setUser(user);
+            customToDoListItem.setIsDefault(true);
+            customToDoListItem.setStatus(ToDoListItemStatus.ACTIVE);
+            customToDoListItemRepo.save(customToDoListItem);
+        });
     }
 
     private void updateExistingCustomToDoListItems(CustomHabitDtoRequest habitDto, Habit habit, User user) {
@@ -475,14 +476,17 @@ public class HabitServiceImpl implements HabitService {
             .forEach(item -> habitDto.getCustomToDoListItemDto().stream()
                 .filter(itemToUpdate -> item.getId().equals(itemToUpdate.getId()))
                 .forEach(itemToUpdate -> {
-                    item.setStatus(itemToUpdate.getStatus());
+                    item.setStatus(ToDoListItemStatus.valueOf(itemToUpdate.getStatus()));
                     item.setText(itemToUpdate.getText());
+                    customToDoListItemRepo.save(item);
                 }));
 
-        customToDoListItemRepo.deleteAll(customToDoListItems.stream()
+        List<CustomToDoListItem> itemsToDisable = customToDoListItems.stream()
             .filter(item -> habitDto.getCustomToDoListItemDto().stream()
                 .noneMatch(itemToUpdate -> item.getId().equals(itemToUpdate.getId())))
-            .collect(Collectors.toList()));
+            .map(item -> item.setStatus(ToDoListItemStatus.DISABLED))
+            .toList();
+        customToDoListItemRepo.saveAll(itemsToDisable);
     }
 
     private void updateHabitTranslationsForCustomHabit(CustomHabitDtoRequest habitDto, Habit habit) {
@@ -524,10 +528,15 @@ public class HabitServiceImpl implements HabitService {
     }
 
     private void setCustomToDoListItemToHabit(CustomHabitDtoRequest habitDto, Habit habit, User user) {
-        List<CustomToDoListItem> customToDoListItems =
-            customToDoListMapper.mapAllToList(habitDto.getCustomToDoListItemDto());
+        List<CustomToDoListItem> customToDoListItems = habitDto.getCustomToDoListItemDto().stream()
+            .map(item -> CustomToDoListItem.builder()
+                .text(item.getText())
+                .build())
+            .toList();
         customToDoListItems.forEach(customToDoListItem -> customToDoListItem.setHabit(habit));
         customToDoListItems.forEach(customToDoListItem -> customToDoListItem.setUser(user));
+        customToDoListItems.forEach(customToDoListItem -> customToDoListItem.setIsDefault(true));
+        customToDoListItems.forEach(customToDoListItem -> customToDoListItem.setStatus(ToDoListItemStatus.ACTIVE));
         customToDoListItemRepo.saveAll(customToDoListItems);
         habit.setCustomToDoListItems(customToDoListItems);
     }
